--- a/Module20_WPF_Testing/FamillyBrowservV2/App.xaml
+++ b/Module20_WPF_Testing/FamillyBrowservV2/App.xaml
@@ -5,12 +5,11 @@
              xmlns:local="clr-namespace:FamillyBrowservV2"
              xmlns:viewModel="clr-namespace:FamillyBrowservV2.MVVN.ViewModel"
              xmlns:view="clr-namespace:FamillyBrowservV2.MVVN.View"
-             StartupUri="MainWindow.xaml"
              >
 
     <Application.Resources>
         
-        <!--<DataTemplate DataType="{x:Type TypeName=viewModel:HomeViewModel}">
+        <DataTemplate DataType="{x:Type TypeName=viewModel:HomeViewModel}">
             <view:HomeView/>
         </DataTemplate>
 
@@ -28,7 +27,7 @@
 
         <DataTemplate DataType="{x:Type TypeName=viewModel:UserViewModel}">
             <view:UserViews/>
-        </DataTemplate>-->
+        </DataTemplate>
 
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
@@ -36,7 +35,7 @@
                 <ResourceDictionary Source="pack://application:,,,/MaterialDesignThemes.Wpf;component/Themes/MaterialDesign2.Defaults.xaml" />
                 <ResourceDictionary Source="/Themes/DarkTheme.xaml"/>
                 <ResourceDictionary Source="/Themes/LightTheme.xaml"/>
-                <ResourceDictionary Source="/Themes/TextBoxTheme .xaml"/>
+                <ResourceDictionary Source="/Themes/TextBoxTheme.xaml"/>
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
         
